--- a/Differential_expression_and_exonUsage/Differential_expression_and_exonUsage.Rmd
+++ b/Differential_expression_and_exonUsage/Differential_expression_and_exonUsage.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Variant_Analysis"
+title: "Differential expression and exon usage analyses"
 author: "MW"
 editor_options:
   chunk_output_type: console
